<resources>
    <string name="app_name">Siyakhula</string>
    <string name="back_button_desc">Go back</string>
    <string name="facebook_logo_desc" />
    <string name="youtube_logo_desc" />
    <string name="instagram_logo_desc" />
    <string name="join_by_clicking_the_button_below" />
    <string name="volunteer_form">volunteer_form</string>
    <string name="description" />
    <string name="volunteersneeded">volunteersneeded</string>
    <string name="X" />
    <string name="banner_image_description" />
    <string name="siyakhula_sa_s_approach_to_community_development_is_concerned_with_or_seeking_to_promote_human_welfare_that_does_not_discriminate_and_shall_not_discriminate_based_on_race_colour_religion_creed_gender_gender_expression_age_national_origin_ancestry_disability_marital_status_sexual_orientation_or_military_status_in_any_of_its_activities_projects_or_operations">siyakhula_sa_s_approach_to_community_development_is_concerned_with_or_seeking_to_promote_human_welfare_that_does_not_discriminate_and_shall_not_discriminate_based_on_race_colour_religion_creed_gender_gender_expression_age_national_origin_ancestry_disability_marital_status_sexual_orientation_or_military_status_in_any_of_its_activities_projects_or_operations"</string>
    <string name="siyakhula_south_africa_sa_was_established_in_2019_as_a_humanitarian_organisation_using_biopsychosocial_spiritual_approach_is_a_general_model_using_biological_psychological_which_entails_thoughts_emotions_and_behaviours_piritual_and_social_factors_all_have_a_significant_role_in_human_functioning_in_the_context_of_disease_or_illness">siyakhula_south_africa_sa_was_established_in_2019_as_a_humanitarian_organisation_using_biopsychosocial_spiritual_approach_is_a_general_model_using_biological_psychological_which_entails_thoughts_emotions_and_behaviours_piritual_and_social_factors_all_have_a_significant_role_in_human_functioning_in_the_context_of_disease_or_illness" </string>
    <string name="x" />
    <string name="about_us_image_description" />
    <string name="volunteer_management">Volunteer management</string>
    <string name="close">X</string>
    <string name="add_volunteer">Add volunteer</string>
    <string name="program_name">Program Name</string>
    <string name="volunteer_name">Volunteer Name</string>
    <string name="edit">Edit</string>
    <string name="del">Del</string>
    <string name="Add_volunteer">Add Volunteer</string>
    <string name="exit">X</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_delete_this_program">Are you sure you want to delete this program?</string>
    <string name="yes">Yes</string>
</resources>