<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".VolunteerManagement">

    <ImageView
        android:id="@+id/siyakhulabanner"
        android:layout_width="400dp"
        android:layout_height="196dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:src="@drawable/siyakhulabanner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volunteer_management"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="#55AA55"
            android:text="@string/close"
            android:onClick="returnClick"
            android:textColor="@android:color/white" />
    </LinearLayout>



    <TextView
        android:id="@+id/tv_program_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#55AA55"
        android:padding="8dp"
        android:text="@string/program_name"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>